welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:6: error: not found: value &&
while (!estSurBiscuit())&&(!estfacemur()){
                        ^