welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
gauche()
gauche()//face a l'Est
while (!estFaceMur()){
	while (!porteBiscuit()) {
while (!estSurBiscuit())&&(!estfacemur()){
	avance();
}
prendBiscuit();// récupération des cookies
	}
while (!estSurBiscuit()){
	recule();
}
if (!estFaceMur()){
avance();
poseBiscuit();
avance();
}
}
if (estFaceMur()){
	droite();
	avance();
	gauche();
	avance();
}
